[project]
name = "boatrace-omura-live"
version = "0.1.0"
description = "大村3連単AI ライブ実績の公開ダッシュボード（読み取り専用・集計表示のみ）"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boatrace_forecast"]
